Update prices and some style chenges

--- a/dev/views/config/config.pug
+++ b/dev/views/config/config.pug
@@ -7,7 +7,7 @@
 -const paninis = ['panini york', 'panini serrano', 'panini bacon', 'panini cangrejo', 'panini BBQ']
 -const hotDogs = ['perrito caliente']
 -const kebabs = ['pollo']
--const starters = ['nuggets (6 unidades)', 'croquetas (6 unidades)', 'empanadillas (6 unidades)', 'san Jacobos (2 unidades)', 'twister (10 unidades)', 'fingers (6 unidades)', 'torpedo (12 unidades)', 'delicias de pollo', 'flamenquines', 'palomitas de pollo', 'tiras de pollo', 'gambas rebozadas']
+-const starters = ['nuggets (6 unidades)', 'croquetas (6 unidades)', 'empanadillas (6 unidades)', 'san Jacobos (2 unidades)', 'twister (10 unidades)', 'torpedo (12 unidades)', 'delicias de pollo', 'flamenquines', 'palomitas de pollo', 'tiras de pollo', 'gambas rebozadas']
 -const chips = ['ali-oli', 'bravas', 'rancheras', 'bacon-chedar', 'salchipapas']
 -const waffles = ['nutella y nata montada', 'helado, nutella y nata']
 -const crepes = ['nutella y nata montada', 'helado, chocolate y nata', 'chocolate blanco y nutella', 'piña, chocolate blanco y nata', 'melocotón, nutella y nata', 'york y queso']
@@ -23,7 +23,7 @@
 -const pricePaninis = ['2,20€', '2,20€', '2,20€', '2,20€', '2,20€']
 -const priceHotDogs = ['2,20€']
 -const priceKebabs = ['3,00€']
--const priceStarters = ['2,20€', '5,00€', '2,20€', '2,20€', '6,00€', '3,00€', '6,00€', '3,00€', '2,20€', '3,50€', '3,50€', '10,00€']
+-const priceStarters = ['2,20€', '5,00€', '2,20€', '2,20€', '6,00€', '6,00€', '3,00€', '2,20€', '3,50€', '3,50€', '10,00€']
 -const priceChips = ['4,50€', '4,50€', '4,00€', '4,00€', '3,50€']
 -const priceWaffles = ['3,00€', '4,00€']
 -const priceCrepes = ['2,30€', '3,30€', '2,30€', '3,00€', '3,00€', '3,00€']
