--- a/dev/views/includes/starters-allergens.pug
+++ b/dev/views/includes/starters-allergens.pug
@@ -7,7 +7,7 @@
 
             h3 Con menú:
             p Nuggets +Bebida +Patatas
-            p 3,80€
+            p 4,00€
             .ingredients__img
                 img(src="assets/img/fried-min.png")
                 img(src="assets/img/drink-min.png")
@@ -23,7 +23,7 @@
 
             h3 Con menú:
             p Croquetas +Bebida +Patatas
-            p 6,50€
+            p 7,00€
             .ingredients__img
                 img(src="assets/img/fried-min.png")
                 img(src="assets/img/drink-min.png")
@@ -39,7 +39,7 @@
 
             h3 Con menú:
             p Empanadillas +Bebida +Patatas
-            p 3,80€
+            p 4,00€
             .ingredients__img
                 img(src="assets/img/fried-min.png")
                 img(src="assets/img/drink-min.png")
@@ -55,7 +55,7 @@
 
             h3 Con menú:
             p San jacobos +Bebida +Patatas
-            p 3,80€
+            p 4,00€
             .ingredients__img
                 img(src="assets/img/fried-min.png")
                 img(src="assets/img/drink-min.png")
@@ -71,22 +71,7 @@
 
             h3 Con menú:
             p Twister +Bebida +Patatas
-            p 7,30€
-            .ingredients__img
-                img(src="assets/img/fried-min.png")
-                img(src="assets/img/drink-min.png")
-                img(src="assets/img/chips-min.png")
-
-#fingers-starter-allergens.lightbox
-    .ingredients
-        center
-            h4 Alérgenos:
-            img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
-            img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
-
-            h3 Con menú:
-            p Fingers +Bebida +Patatas
-            p 4,80€
+            p 7,50€
             .ingredients__img
                 img(src="assets/img/fried-min.png")
                 img(src="assets/img/drink-min.png")
@@ -101,7 +86,7 @@
 
             h3 Con menú:
             p Torpedo +Bebida +Patatas
-            p 7,30€
+            p 7,50€
             .ingredients__img
                 img(src="assets/img/fried-min.png")
                 img(src="assets/img/drink-min.png")
@@ -116,7 +101,7 @@
 
             h3 Con menú:
             p Delicias de pollo +Bebida +Patatas
-            p 4,80€
+            p 5,00€
             .ingredients__img
                 img(src="assets/img/fried-min.png")
                 img(src="assets/img/drink-min.png")
@@ -127,11 +112,12 @@
         center
             h4 Alérgenos:
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
-            img.ingredients__allergen(src='assets/img/gallery/mollusks.svg' alt='mollusks')
+            img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
+            img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
             h3 Con menú:
             p Flamenquines +Bebida +Patatas
-            p 3,80€
+            p 4,00€
             .ingredients__img
                 img(src="assets/img/fried-min.png")
                 img(src="assets/img/drink-min.png")
@@ -146,7 +132,7 @@
 
             h3 Con menú:
             p Palomitas de pollo +Bebida +Patatas
-            p 5,00€
+            p 5,50€
             .ingredients__img
                 img(src="assets/img/fried-min.png")
                 img(src="assets/img/drink-min.png")
@@ -161,7 +147,7 @@
 
             h3 Con menú:
             p Tiras de pollo +Bebida +Patatas
-            p 5,00€
+            p 5,50€
             .ingredients__img
                 img(src="assets/img/fried-min.png")
                 img(src="assets/img/drink-min.png")
@@ -173,11 +159,4 @@
             h4 Alérgenos:
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
             img.ingredients__allergen(src='assets/img/gallery/mollusks.svg' alt='mollusks')
-
-            h3 Con menú:
-            p Gambas rebozadas +Bebida +Patatas
-            p 12,00€
-            .ingredients__img
-                img(src="assets/img/fried-min.png")
-                img(src="assets/img/drink-min.png")
-                img(src="assets/img/chips-min.png")
+            img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
