--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -118,7 +118,7 @@ template { display: none; }
 
 body { display: grid; grid-template-columns: 1fr; grid-template-rows: 150px 1fr 80px; background-color: var(--background-color2); color: var(--text-color3); min-height: 100vh; font-family: "Cabin", "sans-serif"; }
 
-.header { position: -webkit-sticky; position: sticky; top: -92px; grid-row: 1 / 2; padding: 0 0 16px 0; width: 100%; background-color: var(--background-color2); font-family: 'Raleway', sans-serif; border-bottom: 2px solid rgba(255, 255, 255, 0.4); }
+.header { position: sticky; top: -92px; grid-row: 1 / 2; padding: 0 0 16px 0; width: 100%; background-color: var(--background-color2); font-family: 'Raleway', sans-serif; border-bottom: 2px solid rgba(255, 255, 255, 0.4); }
 
 .header .title { width: 100%; font-size: 5rem; color: var(--text-color4); text-align: center; margin: 0; text-transform: uppercase; font-weight: 900; }
 
@@ -158,7 +158,7 @@ body { display: grid; grid-template-columns: 1fr; grid-template-rows: 150px 1fr 
 
 .products__items ol .item1 { font-size: .9rem; margin-left: .5rem; }
 
-.products__items ol .item2 { background-color: var(--primary-color); color: var(--text-color); padding: .23rem .4rem; border: none; border-radius: 15px; font-size: .6rem; box-shadow: 2px 2px 3px 0 rgba(0, 0, 0, 0.5); float: right; }
+.products__items ol .item2 { background-color: var(--primary-color); color: var(--text-color); padding: .23rem .4rem; border: none; border-radius: 15px; font-size: .6rem; box-shadow: 2px 2px 3px 0 rgba(0, 0, 0, 0.5); float: right; width: 118px; }
 
 .products__items ol .item2 i { margin-left: .3rem; }
 
@@ -178,14 +178,14 @@ body { display: grid; grid-template-columns: 1fr; grid-template-rows: 150px 1fr 
 
 @media screen and (min-width: 700px) { .products__items { display: grid; grid-template-columns: 4fr 1fr; }
   .products__items li .item1 { font-size: 1.1rem; }
-  .products__items li .item2 { font-size: .7rem; margin-top: .02rem; }
+  .products__items li .item2 { font-size: .7rem; margin-top: .02rem; width: 152px; }
   .products__items li .item3 { font-size: 1rem; }
   .products__items li .item4 { padding-top: .05rem; }
   .products__items .flavors { font-size: .7rem; margin-top: .02rem; }
   .products__items .products__image { align-self: center; justify-content: center; } }
 
 @media screen and (min-width: 1024px) { .products__items li .item1 { font-size: 1.2rem; }
-  .products__items li .item2 { font-size: .8rem; margin-top: 0; }
+  .products__items li .item2 { font-size: .8rem; margin-top: 0; width: 152px; }
   .products__items li .item4 { padding-top: .1rem; }
   .products__items .flavors { font-size: .8rem; margin-top: .02rem; } }
 
