--- a/dev/scss/blocks/_products-items.scss
+++ b/dev/scss/blocks/_products-items.scss
@@ -24,6 +24,7 @@
       font-size: .6rem;
       box-shadow: 2px 2px 3px 0 rgba(0,0,0,0.5);
       float: right;
+      width: 118px;
 
       & i {
         margin-left: .3rem;
@@ -83,6 +84,7 @@
       & .item2 {
         font-size: .7rem;
         margin-top: .02rem;
+        width: 152px;
       }
 
       & .item3 {
@@ -115,6 +117,7 @@
       & .item2 {
         font-size: .8rem;
         margin-top: 0;
+        width: 152px;
       }
 
       & .item4 {
